--- a/Free5GC/Deployment/pcf/pcf.yaml
+++ b/Free5GC/Deployment/pcf/pcf.yaml
@@ -20,21 +20,22 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        #kubernetes.io/hostname: whitesnake
       containers:
         - name: pcf
-          image: free5gc/pcf:latest
+          image: free5gc/pcf:v3.3.0
           imagePullPolicy: Always
-          command: ["./pcf", "-c", "/free5gc/config/pcfConfig.yaml"]
+          command: ["./pcf", "-c", "/configuracoes/pcfConfig.yaml"]
           ports:
             - containerPort: 8000
           volumeMounts:
             - name: config-volume
-              mountPath: /free5gc/config
+              mountPath: /configuracoes
       volumes:
         - name: config-volume
           configMap:
             name: pcf-config
+            defaultMode: 0777
 ---
 apiVersion: v1
 kind: ConfigMap
