--- a/Free5GC/Deployment/amf/amf.yaml
+++ b/Free5GC/Deployment/amf/amf.yaml
@@ -20,21 +20,22 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        #kubernetes.io/hostname: whitesnake
       containers:
         - name: amf
-          image: free5gc/amf:latest
+          image: free5gc/amf:v3.3.0
           imagePullPolicy: Always
-          command: ["./amf", "-c" ,"/free5gc/config/amfConfig.yaml"]
+          command: ["./amf", "-c" ,"/configuracoes/amfConfig.yaml"]
           ports:
             - containerPort: 8000
           volumeMounts:
             - name: config-volume
-              mountPath: /free5gc/config
+              mountPath: /configuracoes
       volumes:
         - name: config-volume
           configMap:
             name: amf-config
+            defaultMode: 0777
 ---
 apiVersion: v1
 kind: ConfigMap
