--- a/Free5GC/Deployment/ausf/ausf.yaml
+++ b/Free5GC/Deployment/ausf/ausf.yaml
@@ -20,21 +20,22 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        #kubernetes.io/hostname: whitesnake
       containers:
         - name: ausf
-          image: free5gc/ausf:latest
+          image: free5gc/ausf:v3.3.0
           imagePullPolicy: Always
-          command: ["./ausf", "-c", "/free5gc/config/ausfConfig.yaml"]
+          command: ["./ausf", "-c", "/configuracoes/ausfConfig.yaml"]
           ports:
             - containerPort: 8000
           volumeMounts:
             - name: config-volume
-              mountPath: /free5gc/config
+              mountPath: /configuracoes
       volumes:
         - name: config-volume
           configMap:
             name: ausf-config
+            defaultMode: 0777
 ---
 apiVersion: v1
 kind: ConfigMap
