--- a/Free5GC/Deployment/n3iwf/n3iwf.yaml
+++ b/Free5GC/Deployment/n3iwf/n3iwf.yaml
@@ -19,10 +19,10 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        #kubernetes.io/hostname: whitesnake
       containers:
         - name: n3iwf
-          image: free5gc/n3iwf:latest
+          image: free5gc/n3iwf:v3.3.0
           imagePullPolicy: Always
           command: ["sh","-c","/free5gc/script/n3iwf-ipsec.sh"]
           ports:
@@ -33,7 +33,7 @@ spec:
               add: ["NET_ADMIN", "SYS_MODULE"]
           volumeMounts:
             - name: config-volume
-              mountPath: /free5gc/config
+              mountPath: /configuracoes
             - name: ipsec-script
               mountPath: /free5gc/script
       volumes:
@@ -117,7 +117,7 @@ data:
     ip link add name ipsec0 type vti local $(hostname -i | awk '{print $1}') remote 0.0.0.0 key 5
     ip addr add 10.0.0.1/24 dev ipsec0
     ip link set dev ipsec0 up
-    ./n3iwf -c /free5gc/config/n3iwfConfig.yaml
+    ./n3iwf -c /configuracoes/n3iwfConfig.yaml
 ---
 apiVersion: v1
 kind: Service
