--- a/Free5GC/Deployment/nrf/nrf.yaml
+++ b/Free5GC/Deployment/nrf/nrf.yaml
@@ -54,21 +54,22 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        #kubernetes.io/hostname: whitesnake
       containers:
         - name: nrf
-          image: free5gc/nrf:latest
+          image: free5gc/nrf:v3.3.0
           imagePullPolicy: Always
-          command: ["./nrf", "-c", "/free5gc/config/nrfConfig.yaml"]
+          command: ["./nrf", "-c", "/configuracoes/nrfConfig.yaml"]
           ports:
             - containerPort: 8000
           volumeMounts:
             - name: config-volume
-              mountPath: /free5gc/config
+              mountPath: /configuracoes
       volumes:
         - name: config-volume
           configMap:
             name: nrf-config
+            defaultMode: 0777
 ---
 apiVersion: v1
 kind: Service
