--- a/Free5GC/Deployment/nssf/nssf.yaml
+++ b/Free5GC/Deployment/nssf/nssf.yaml
@@ -20,21 +20,22 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        #kubernetes.io/hostname: whitesnake
       containers:
         - name: nssf
-          image: free5gc/nssf:latest
+          image: free5gc/nssf:v3.3.0
           imagePullPolicy: Always
-          command: ["./nssf", "-c", "/free5gc/config/nssfConfig.yaml"]
+          command: ["./nssf", "-c", "/configuracoes/nssfConfig.yaml"]
           ports:
             - containerPort: 8000
           volumeMounts:
             - name: config-volume
-              mountPath: /free5gc/config
+              mountPath: /configuracoes
       volumes:
         - name: config-volume
           configMap:
             name: nssf-config
+            defaultMode: 0777
 ---
 apiVersion: v1
 kind: ConfigMap
