--- a/Free5GC/Deployment/udm/udm.yaml
+++ b/Free5GC/Deployment/udm/udm.yaml
@@ -20,21 +20,22 @@ spec:
       nodeSelector:
         nodetype: server
         kubernetes.io/arch: amd64
-        kubernetes.io/hostname: whitesnake
+        #kubernetes.io/hostname: whitesnake
       containers:
         - name: udm
-          image: free5gc/udm:latest
+          image: free5gc/udm:v3.3.0
           imagePullPolicy: Always
-          command: ["./udm", "-c", "/free5gc/config/udmConfig.yaml"]
+          command: ["./udm", "-c", "/configuracoes/udmConfig.yaml"]
           ports:
             - containerPort: 8000
           volumeMounts:
             - name: config-volume
-              mountPath: /free5gc/config
+              mountPath: /configuracoes
       volumes:
         - name: config-volume
           configMap:
             name: udm-config
+            defaultMode: 0777
 ---
 apiVersion: v1
 kind: ConfigMap
