--- a/OAI-5G/Deployment/persistent-log.yaml
+++ b/OAI-5G/Deployment/persistent-log.yaml
@@ -4,7 +4,7 @@ metadata:
   name: oai-tcpdump-pv-claim
   namespace: oai-cn5g
 spec:
-  storageClassName: rook-cephfs
+  storageClassName: rook-ceph-fs-simple
   accessModes:
     - ReadWriteMany
   resources:
