--- a/Open5GS/Deployment/iperf/iperf.yaml
+++ b/Open5GS/Deployment/iperf/iperf.yaml
@@ -5,20 +5,20 @@ metadata:
   namespace: cemenin
   labels:
     epc-mode: iperf
-    promotheus: open5gs-monitor
+    prometheus: open5gs-monitor
 spec:
   selector:
     epc-mode: iperf
   ports:
-    - name: o5g-iperf-5001
+    - name: tcp-5001
       protocol: TCP
       port: 5001
       targetPort: 5001
-    - name: o5g-iperf-udp-5001
+    - name: udp-5001
       protocol: UDP
       port: 5001
       targetPort: 5001
-    - name: o5g-iperf-9100
+    - name: tcp-9100
       protocol: TCP
       port: 9100
       targetPort: 9100
@@ -30,7 +30,6 @@ metadata:
   namespace: cemenin
   labels:
     epc-mode: pcf
-    promotheus: open5gs-monitor
 spec:
   replicas: 1
   selector:
@@ -40,6 +39,9 @@ spec:
     metadata:   
       labels:
         epc-mode: iperf
+        prometheus: open5gs-monitor
+        version: 2.6.4
+        app: open5gs-iperf
     spec:  
       nodeSelector:
         kubernetes.io/arch: amd64
@@ -47,8 +49,15 @@ spec:
         - name: iperf
           image: mlabbe/iperf:latest  
           ports:
-            - containerPort: 5001
-              name: f5g-iperf-5001
+            - name: tcp-5001
+              protocol: TCP
+              containerPort: 5001
+            - name: udp-5001
+              protocol: UDP
+              containerPort: 5001
+            - name: tcp-9100
+              protocol: TCP
+              containerPort: 9100
           securityContext:
             privileged: true
             capabilities:
