--- a/Open5GS/Deployment/smf/smf.yaml
+++ b/Open5GS/Deployment/smf/smf.yaml
@@ -5,33 +5,33 @@ metadata:
   namespace: cemenin
   labels:
     epc-mode: smf
-    promotheus: open5gs-monitor
+    prometheus: open5gs-monitor
 spec:
   selector:
     epc-mode: smf
   #type: ClusterIP
   ports:
-    - name: http2-open5gs-smf-80
+    - name: tcp-80
       protocol: TCP
       port: 80
       targetPort: 80
-    - name: open5gs-smf-udp-2152
+    - name: udp-2152
       protocol: UDP
       port: 2152
       targetPort: 2152
-    - name: open5gs-smf-udp-2123
+    - name: udp-2123
       protocol: UDP
       port: 2123
       targetPort: 2123
-    - name: open5gs-smf-udp-8805
+    - name: udp-8805
       protocol: UDP
       port: 8805
       targetPort: 8805
-    - name: open5gs-smf-sctp-3868
+    - name: sctp-3868
       protocol: SCTP
       port: 3868
       targetPort: 3868
-    - name: http-open5gs-smf-tcp-9090
+    - name: tcp-9090
       protocol: TCP
       port: 9090
       targetPort: 9090
@@ -55,6 +55,7 @@ spec:
         epc-mode: smf
         app: open5gs-smf
         prometheus: open5gs-monitor
+        version: 2.6.4
     spec:
       nodeSelector:
         nodetype: server
@@ -73,6 +74,25 @@ spec:
         - name: smf
           image: maikovisky/open5gs:2.6.4
           imagePullPolicy: Always
+          ports:
+            - name: tcp-80
+              protocol: TCP
+              containerPort: 80
+            - name: udp-2152
+              protocol: UDP
+              containerPort: 2152
+            - name: udp-2123
+              protocol: UDP
+              containerPort: 2123
+            - name: udp-8805
+              protocol: UDP
+              containerPort: 8805
+            - name: sctp-3868
+              protocol: SCTP
+              containerPort: 3868
+            - name: tcp-9090
+              protocol: TCP
+              containerPort: 9090
           securityContext:
             privileged: true
             capabilities:
