--- a/Free5GC/Deployment/iperf/iperf.yaml
+++ b/Free5GC/Deployment/iperf/iperf.yaml
@@ -10,18 +10,18 @@ spec:
   selector:
     epc-mode: iperf
   ports:
-    - name: f5g-iperf-5001
+    - name: tcp-5001
       protocol: TCP
       port: 5001
       targetPort: 5001
-    - name: f5g-iperf-udp-5001
+    - name: udp-5001
       protocol: UDP
       port: 5001
       targetPort: 5001
-    - name: f5g-iperf-9100
+    - name: tcp-15090
       protocol: TCP
-      port: 9100
-      targetPort: 9100
+      port: 15090
+      targetPort: 15090
 ---    
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -29,8 +29,7 @@ metadata:
   name: free5gc-iperf
   namespace: free5gc
   labels:
-    epc-mode: pcf
-    promotheus: free5gc-monitor
+    epc-mode: iperf
 spec:
   replicas: 1
   selector:
@@ -40,6 +39,9 @@ spec:
     metadata:   
       labels:
         epc-mode: iperf
+        version: v3.3.0
+        prometheus: free5gc-monitor
+        app: free5gc-iperf
     spec:  
       nodeSelector:
         kubernetes.io/arch: amd64
@@ -49,11 +51,34 @@ spec:
         - name: iperf
           image: mlabbe/iperf:latest  
           ports:
-            - containerPort: 5001
-              name: f5g-iperf-5001
+            - name: tcp-5001
+              protocol: TCP
+              containerPort: 5001
+            - name: udp-5001
+              protocol: UDP
+              containerPort: 5001
+            - name: tcp-15090
+              protocol: TCP
+              containerPort: 15090
           securityContext:
             privileged: true
             capabilities:
               add: ["NET_ADMIN", "SYS_MODULE"]  
           #command: ["/bin/iperf", "-s", "--histograms"]
           command: ["iperf","-s","-p","5001"]
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: free5gc-iperf
+  namespace: free5gc
+  labels:
+    epc-mode: iperf
+spec:
+  selector:
+    matchLabels:
+      epc-mode: iperf
+  endpoints:
+  - interval: 30s
+    port: tcp-15090
+---
