--- a/Free5GC/Deployment/nrf/nrf.yaml
+++ b/Free5GC/Deployment/nrf/nrf.yaml
@@ -49,6 +49,8 @@ spec:
       labels:
         epc-mode: nrf
         app: free5gc-nrf
+        version: v3.3.0
+        prometheus: free5gc-monitor
     spec:
       hostname: nrf-pod
       nodeSelector:
@@ -61,7 +63,12 @@ spec:
           imagePullPolicy: Always
           command: ["./nrf", "-c", "/configuracoes/nrfConfig.yaml"]
           ports:
-            - containerPort: 8000
+            - name: tcp-8000
+              protocol: TCP
+              containerPort: 8000
+            - name: tcp-15090
+              protocol: TCP
+              containerPort: 15090
           volumeMounts:
             - name: config-volume
               mountPath: /configuracoes
@@ -81,9 +88,27 @@ spec:
     epc-mode: nrf
     app: free5gc-nrf
   ports:
-    - name: http-free5gc-nrf-8000
+    - name: tcp-8000
       protocol: TCP
       port: 8000
       targetPort: 8000
-        
-            
+    - name: tcp-15090
+      protocol: TCP
+      port: 15090
+      targetPort: 15090
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: free5gc-nrf
+  namespace: free5gc
+  labels:
+    epc-mode: nrf
+spec:
+  selector:
+    matchLabels:
+      epc-mode: nrf
+  endpoints:
+  - interval: 30s
+    port: tcp-15090
+---
