--- a/Free5GC/Deployment/nssf/nssf.yaml
+++ b/Free5GC/Deployment/nssf/nssf.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         epc-mode: nssf
         app: free5gc-nssf
+        version: v3.3.0
+        prometheus: free5gc-monitor
     spec:
       hostname: nssf-pod
       nodeSelector:
@@ -27,7 +29,12 @@ spec:
           imagePullPolicy: Always
           command: ["./nssf", "-c", "/configuracoes/nssfConfig.yaml"]
           ports:
-            - containerPort: 8000
+            - name: tcp-8000
+              protocol: TCP
+              containerPort: 8000
+            - name: tcp-15090
+              protocol: TCP
+              containerPort: 15090
           volumeMounts:
             - name: config-volume
               mountPath: /configuracoes
@@ -407,7 +414,27 @@ spec:
     epc-mode: nssf
     app: free5gc-nssf
   ports:
-    - name: http-free5gc-nssf-8000
+    - name: tcp-8000
       protocol: TCP
       port: 8000
       targetPort: 8000
+    - name: tcp-15090
+      protocol: TCP
+      port: 15090
+      targetPort: 15090
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: free5gc-nssf
+  namespace: free5gc
+  labels:
+    epc-mode: nssf
+spec:
+  selector:
+    matchLabels:
+      epc-mode: nssf
+  endpoints:
+  - interval: 30s
+    port: tcp-15090
+---
