--- a/Free5GC/Deployment/smf/smf.yaml
+++ b/Free5GC/Deployment/smf/smf.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         epc-mode: smf
         app: free5gc-smf
+        version: v3.3.0
+        prometheus: free5gc-monitor
     spec:
       hostname: smf-pod
       nodeSelector:
@@ -27,7 +29,18 @@ spec:
           imagePullPolicy: Always
           command: ["./smf", "-c", "/configuracoes/smfConfig.yaml", "-u", "/free5gc/ue/ueRouting.yaml"]
           ports:
-            - containerPort: 8000
+            - name: tcp-8000
+              protocol: TCP
+              containerPort: 8000
+            - name: tcp-15090
+              protocol: TCP
+              containerPort: 15090
+            - name: udp-2152
+              protocol: UDP
+              containerPort: 2152
+            - name: udp-8805
+              protocol: UDP
+              containerPort: 8805
           volumeMounts:
             - name: config-volume
               mountPath: /configuracoes
@@ -198,11 +211,35 @@ spec:
     epc-mode: smf
     app: free5gc-smf
   ports:
-    - name: free5gc-smf-udp-2152
+    - name: udp-2152
       protocol: UDP
       port: 2152
       targetPort: 2152
-    - name: http-free5gc-smf-8000
+    - name: tcp-8000
       protocol: TCP
       port: 8000
       targetPort: 8000
+    - name: udp-8805
+      protocol: UDP
+      port: 8805
+      targetPort: 8805
+    - name: tcp-15090
+      protocol: TCP
+      port: 15090
+      targetPort: 15090
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: free5gc-smf
+  namespace: free5gc
+  labels:
+    epc-mode: smf
+spec:
+  selector:
+    matchLabels:
+      epc-mode: smf
+  endpoints:
+  - interval: 30s
+    port: tcp-15090
+---
