--- a/Free5GC/Deployment/tester/my5grantester.yaml
+++ b/Free5GC/Deployment/tester/my5grantester.yaml
@@ -1,25 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: my5grantester
-  namespace: free5gc
-  labels:
-    epc-mode: my5grantester
-spec:
-  selector:
-    epc-mode: my5grantester
-  ports:
-    - name: tcp-8000
-      protocol: TCP
-      port: 8000
-    - name: tcp-3000
-      protocol: TCP
-      port: 3000
-    - name: tcp-15090
-      protocol: TCP
-      port: 15090
-      targetPort: 15090
----
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -47,15 +25,9 @@ spec:
         - name: my5grantester
           image:  carlosmenin/my5grantester:latest
           ports:
-            - name: tcp-8000
+            - name: http2-8000
               protocol: TCP
               containerPort: 8000
-            - name: tcp-3000
-              protocol: TCP
-              containerPort: 3000
-            - name: tcp-15090
-              protocol: TCP
-              containerPort: 15090
           env:
             - name: NGAP_LOCAL_ADDR
               valueFrom:
@@ -94,7 +66,7 @@ spec:
             - name: TEST
               value: parallel
             - name: NUM_UE
-              value: "1"
+              value: "100"
             - name: DELAY
               value: "1000"
             - name: TIME
@@ -108,18 +80,4 @@ spec:
                 - SYS_MODULE
             privileged: true
 ---
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: free5gc-my5grantester
-  namespace: free5gc
-  labels:
-    epc-mode: my5grantester
-spec:
-  selector:
-    matchLabels:
-      epc-mode: my5grantester
-  endpoints:
-  - interval: 30s
-    port: tcp-15090
----
+
