--- a/Free5GC/Deployment/amf/amf.yaml
+++ b/Free5GC/Deployment/amf/amf.yaml
@@ -29,15 +29,12 @@ spec:
           imagePullPolicy: Always
           command: ["./amf", "-c" ,"/configuracoes/amfConfig.yaml"]
           ports:
-            - name: tcp-8000
+            - name: http2-8000
               protocol: TCP
               containerPort: 8000
             - name: sctp-38412
               protocol: SCTP
               containerPort: 38412
-            - name: tcp-15090
-              protocol: TCP
-              containerPort: 15090
           volumeMounts:
             - name: config-volume
               mountPath: /configuracoes
@@ -178,7 +175,7 @@ spec:
     epc-mode: amf
     app: free5gc-amf
   ports:
-    - name: tcp-8000
+    - name: http2-8000
       protocol: TCP
       port: 8000
       targetPort: 8000
@@ -186,23 +183,4 @@ spec:
       protocol: SCTP
       port: 38412
       targetPort: 38412
-    - name: tcp-15090
-      protocol: TCP
-      port: 15090
-      targetPort: 15090
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: free5gc-amf
-  namespace: free5gc
-  labels:
-    epc-mode: amf
-spec:
-  selector:
-    matchLabels:
-      epc-mode: amf
-  endpoints:
-  - interval: 30s
-    port: tcp-15090
 ---
