--- a/Free5GC/Deployment/iperf/iperf.yaml
+++ b/Free5GC/Deployment/iperf/iperf.yaml
@@ -10,7 +10,7 @@ spec:
   selector:
     epc-mode: iperf
   ports:
-    - name: tcp-5001
+    - name: http2-5001
       protocol: TCP
       port: 5001
       targetPort: 5001
@@ -18,10 +18,6 @@ spec:
       protocol: UDP
       port: 5001
       targetPort: 5001
-    - name: tcp-15090
-      protocol: TCP
-      port: 15090
-      targetPort: 15090
 ---    
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
@@ -51,34 +47,16 @@ spec:
         - name: iperf
           image: mlabbe/iperf:latest  
           ports:
-            - name: tcp-5001
+            - name: http2-5001
               protocol: TCP
               containerPort: 5001
             - name: udp-5001
               protocol: UDP
               containerPort: 5001
-            - name: tcp-15090
-              protocol: TCP
-              containerPort: 15090
           securityContext:
             privileged: true
             capabilities:
               add: ["NET_ADMIN", "SYS_MODULE"]  
           #command: ["/bin/iperf", "-s", "--histograms"]
           command: ["iperf","-s","-p","5001"]
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: free5gc-iperf
-  namespace: free5gc
-  labels:
-    epc-mode: iperf
-spec:
-  selector:
-    matchLabels:
-      epc-mode: iperf
-  endpoints:
-  - interval: 30s
-    port: tcp-15090
 ---
