--- a/Free5GC/Deployment/mongo/mongo.yaml
+++ b/Free5GC/Deployment/mongo/mongo.yaml
@@ -5,8 +5,10 @@ metadata:
   namespace: free5gc
 spec:
   ports:
-  - port: 27017
-    name: mongo-free5gc-27017
+    - name: mongo-27017
+      protocol: TCP
+      port: 27017
+      targetPort: 27017
   selector:
     app: free5gc-mongodb
 ---
@@ -34,8 +36,9 @@ spec:
       - image: free5gmano/nextepc-mongodb
         name: free5gc-mongodb
         ports:
-        - containerPort: 27017
-          name: mongodb
+          - name: mongo-27017
+            protocol: TCP
+            containerPort: 27017
         volumeMounts:
         - name: mongodb-persistent-storage
           mountPath: /data
