--- a/Free5GC/Deployment/udm/udm.yaml
+++ b/Free5GC/Deployment/udm/udm.yaml
@@ -29,12 +29,9 @@ spec:
           imagePullPolicy: Always
           command: ["./udm", "-c", "/configuracoes/udmConfig.yaml"]
           ports:
-            - name: tcp-8000
+            - name: http2-8000
               protocol: TCP
               containerPort: 8000
-            - name: tcp-15090
-              protocol: TCP
-              containerPort: 15090
           volumeMounts:
             - name: config-volume
               mountPath: /configuracoes
@@ -95,27 +92,8 @@ spec:
     epc-mode: udm
     app: free5gc-udm
   ports:
-    - name: tcp-8000
+    - name: http2-8000
       protocol: TCP
       port: 8000
       targetPort: 8000
-    - name: tcp-15090
-      protocol: TCP
-      port: 15090
-      targetPort: 15090
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: free5gc-udm
-  namespace: free5gc
-  labels:
-    epc-mode: udm
-spec:
-  selector:
-    matchLabels:
-      epc-mode: udm
-  endpoints:
-  - interval: 30s
-    port: tcp-15090
 ---
